--- a/design.css
+++ b/design.css
@@ -1,4 +1,34 @@
 
+.navbar{
+  background: #5F75FF;}
+}
+.nav-link{
+  margin-right:2em;}
+.navbar-brand{
+  color:#FFF2F1;
+}
+.nav-link{
+  color:#FFF2F1;
+}
+.nav-link:hover{
+  color :#E8930C;
+  background-color: #FFF2F1;
+}
+.navbar-brand:hover{
+  color:#FFF2F1;
+}
+.navbar-collapse{ justify-content: flex-end;}
+
+.header{
+  background-image : url('https://dtqnv8in03d1n.cloudfront.net/wp-content/uploads/2016/09/best-programming-habits-to-have.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.imag{
+  margin: 10px;
+  border-radius: 20px;
+}
 p {
   color: green;
   text-align: center;
@@ -140,7 +170,7 @@ html {
 }
 .naveg li:hover {
   background:
-  
+  url:()
 }
 .naveg li:hover a {
   color: #d94f5c;
