--- a/src/design.css
+++ b/src/design.css
@@ -225,3 +225,50 @@ html {
     background-position-x: 390px;
   }
 }
+/* Popup container */
+.popup {
+    margin-right:2em;
+    color:#FFF2F1;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.popup:hover{
+    color :#E8930C;
+    background-color: #FFF2F1;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
