--- a/src/design.css
+++ b/src/design.css
@@ -226,42 +226,46 @@ html {
   }
 }
 /* Popup container */
-.popup {
-    margin-right:2em;
-    color:#FFF2F1;
+#container {
+    width: 100%;
+    height: 100%;
+    top: 0;
     position: relative;
-    display: inline-block;
-    cursor: pointer;
-}
-
-.popup:hover{
-    color :#E8930C;
-    background-color: #FFF2F1;
-}
-
-/* The actual popup (appears on top) */
-.popup .popuptext {
     visibility: hidden;
-    width: 160px;
-    background-color: #555;
-    color: #fff;
+    display: none;
+    background-color: #555; /* complimenting your modal colors */
+}
+#container:target {
+    position:absolute;
+    visibility: visible;
+    animation: fadeIn 0.6s;
+    width: 40%;
+    height: 400%;
     text-align: center;
     border-radius: 6px;
     padding: 8px 0;
-    position: absolute;
+    border: 2px solid #000000;
     z-index: 1;
     bottom: 125%;
     left: 50%;
-    margin-left: -80px;
+    margin-left: -20%;
+    margin-top: 10em;
+    display: block;
+    color :#1e7e34;
+    background-color: #212529;
 }
-
-/* Toggle this class when clicking on the popup container (hide and show the popup) */
-.popup .show {
-    visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s
+.popup {
+    position: relative;
+    margin: 0 auto;
+    top: 25%;
+    color:#FFF2F1;
+    cursor: pointer;
 }
-
+div.popup img {
+  margin-block-start: -9em;
+  margin-block-end: 0em;
+  margin-inline-start: 93%;
+}
 /* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
     from {opacity: 0;}
