--- a/src/design.css
+++ b/src/design.css
@@ -1,6 +1,6 @@
 .navbar{
   background: #20c997;
-}1
+}
 
 .nav-link{
   margin-right:2em;}
@@ -56,7 +56,7 @@
 .titulo h3{
   text-align:center;
   position: relative;
-  bottom:-2em;
+  bottom:-1em;
   font-family: 'Black Han Sans', sans-serif;
   font-size: 2.5em;
   color: #00D64D;
@@ -100,11 +100,126 @@ img {
     width: 100px;
     background-color: lightblue;
 }
+/* #textr{
+  position:relative;
+  bottom:500px;
+  left:200px;
+
+} */
+#ranking{
+  height: 350px;
+  width:100%;
+}
+#rankstar{
+  position: relative;
+  bottom:90px;
+  left:370px;
+}
+#arrow1{
+  border-left: 2px solid grey;
+  height: 230px;
+}
+#arrow2{
+  border-top: 2px solid grey;
+  width: 250px;
+}
+#rank1 {
+  position: relative;
+  bottom:250px;
+  left:30px;
+}
+#rank2 {
+  position: relative;
+  bottom:210px;
+  left:-20px;
+}
+#rank3 {
+  position: relative;
+  bottom:170px;
+  left:-70px;
+}
+#rank4 {
+  position: relative;
+  bottom:130px;
+  left:-120px;
+}
+#rank5 {
+  position: relative;
+  bottom:90px;
+  left:-170px;
+}
+#ranking p{
+  color: grey;
+  position: relative;
+  top:50px;
+  left:100px;
+}
 
 .page-footer{
   position: relative;
+  background-color:#20c997;
+  height: 100%;
+}
+#about h1{
+  color:white;
+  position: relative;
+  left:150px;
+  font-size:25px;
+}
+#about h2{
+  color:white;
+  position: relative;
+  left:80px;
+  font-size:20px;
+}
+#about p{
+  color:white;
+  position: relative;
+  left:40px;
+  font-size:15px;
+}
+#about nav{
+  position: relative;
+  left:100px;
+  font-size: 20px;
+}
+#about h3{
+    position: relative;
+    left:100px;
+    color:white;
+    font-size: 20px;
 
-  background-color: DarkCyan;
+}
+#social h1{
+  position: relative;
+  top:10px;
+  left:350px;
+  color:#FFEBCB;
+}
+.btn-floating i{
+  display: inline-block;
+  text-align: center;
+  color: #FFFF;
+  font-size: 1em;
+  border-radius: 50%;
+  line-height: 60px;
+  width: 60px;
+  background-color: grey;
+  position: relative;
+  top:30px;
+  left:25px;
+
+}
+.fa fa-twitter{
+  width: 40px !important;
+  height: 40px !important;
+}
+.fa{
+  font-style: normal;
+  font-variant-alternates: normal;
+  font-variant-numeric: normal;
+  font-weight: normal;
+  font-family: FontAwesome;
 }
 .parte-baja{
   position: fixed;
@@ -115,7 +230,23 @@ img {
   font-family: "Libre Baskerville", "Anton", "Josefin Sans";
 
 }
+#ubic h1{
+  color:white;
+}
+#ubic p{
+  color:white;
+  position: relative;
+  left:10px;
+}
 
+.col-lg-2  i{
+  display:inline-block;
+  text-align: center;
+  color:#FFFF;
+  font-size: 1em;
+  top:-10px;
+  left:60px;
+}
 .navigation{
   background-color: white;
   border-style: ridge;
