--- a/src/design.css
+++ b/src/design.css
@@ -467,3 +467,54 @@ footer{
     background-position-x: 390px;
   }
 }
+/* Popup container */
+#container {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: relative;
+    visibility: hidden;
+    display: none;
+    background-color: #555; /* complimenting your modal colors */
+}
+#container:target {
+    position:absolute;
+    visibility: visible;
+    animation: fadeIn 0.6s;
+    width: 40%;
+    height: 400%;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    border: 2px solid #000000;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -20%;
+    margin-top: 10em;
+    display: block;
+    color :#1e7e34;
+    background-color: #212529;
+}
+.popup {
+    position: relative;
+    margin: 0 auto;
+    top: 25%;
+    color:#FFF2F1;
+    cursor: pointer;
+}
+div.popup img {
+  margin-block-start: -9em;
+  margin-block-end: 0em;
+  margin-inline-start: 93%;
+}
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
