--- a/src/design.css
+++ b/src/design.css
@@ -1,4 +1,4 @@
-.navbar{
+ .navbar{
   background: #20c997;
 }
 
@@ -41,15 +41,18 @@
   letter-spacing: 3px;
   top:50px;
   color:#EDCA36;
-  /* text-shadow: 3px 3px blue; */
-  font-family: 'Black Han Sans', sans-serif;
+  text-align: center;
+  letter-spacing: 3px;
+  font-family: 'Slabo 27px', serif;
   font-size: 3.5em;
 
 }
 .titulo h2{
   text-align: center;
   position: relative;
-  font-family: "Black Han Sans", sans-serif;
+  text-align: center;
+  letter-spacing: 3px;
+  font-family: 'Slabo 27px', serif;
   font-size: 2.5em;
   top:50px;
   color:#00D64D;
@@ -59,7 +62,9 @@
   text-align:center;
   position: relative;
   bottom:-1em;
-  font-family: 'Black Han Sans', sans-serif;
+  text-align: center;
+  letter-spacing: 3px;
+  font-family: 'Slabo 27px', serif;
   font-size: 2.5em;
   top:50px;
   color: #00D64D;
@@ -77,21 +82,44 @@
   border-bottom-right-radius: 30px; */
   /* background-image: url('https://www.elegantthemes.com/blog/wp-content/uploads/2017/07/programming-languages-to-learn-for-wordpress-featured-image.png'); */
 }
-.uno h1{
-  text-align: left;
+#uno h1{
   position: relative;
-  bottom:-10px;
+  left:10px;
+}
+#uno p{
+  text-align:center;
+  position: relative;
+  bottom:-80px;
+  left:500px;
+  text-align: left;
+  letter-spacing: 2px;
+  font-family: 'Slabo 27px', serif;
+  font-size: 20px;
+  color: grey;
 }
 
-.uno button{
+#uno button{
   position: relative;
-  top:-105px;
-  right:-870px;
+  bottom:265px;
+  left:280px;
+  font-size: 20px;
 }
-.dos{
-    /* background-color: #D2D6B9; */
-  /* height:300px; */
+#bienv{
+  position: relative;
+  font-size:30px;
+  bottom:290px;
+  left:80px;
 }
+#uno img{
+  position:relative;
+  width:300px;
+  height:200px;
+  bottom:100px;
+  border-radius: 20%;
+  right:180px;
+
+}
+
 .imagg{
   position: relative;
   top:-150px;
@@ -597,6 +625,7 @@ div.popup img {
     from {opacity: 0.2;}
     to {opacity: 1;}
 }
+
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity:1 ;}
