--- a/src/design.css
+++ b/src/design.css
@@ -1,6 +1,6 @@
 
  .navbar{
-  background: #20c997;
+  background: #0b231c;
 }
 
 .nav-link{
@@ -241,7 +241,8 @@ img {
   margin-left:50px;
   margin-right:50px;
   background-position:relative;
-  background-color:#FFFFFF
+  background-color:#FFFFFF;
+  border-radius: 10px;
 
 }
 #rankstar{
