--- a/src/design.css
+++ b/src/design.css
@@ -19,18 +19,23 @@
   }
   .navbar-collapse{ justify-content: flex-end;}
 
+.body-main{
+  width:100%;
+  height:100%;
+}
   .header{
     background-image: url('http://gda.itesm.mx/sitios/imagesCont/computer-programming_bcba943585.jpeg');
     background-attachment: scroll;
     background-size:cover;
     top:2em;
-    height:28em;
+    width:100%;
+    height:24em;
     z-index: -2;
     opacity: 0.9;
   }
   .titulo {
-    position: relative;
-    bottom: -5em;
+    position:relative;
+    bottom:-5em;
     color:#0000;
     margin: auto;
   }
@@ -38,7 +43,7 @@
     position: relative;
     text-align: center;
     letter-spacing: 3px;
-    top:50px;
+    top:2vw;
     color:#FFFF;
     text-align: center;
     letter-spacing: 3px;
@@ -53,26 +58,25 @@
     letter-spacing: 3px;
     font-family: 'Slabo 27px', serif;
     font-size: 2.5em;
-    top:50px;
+    top:2vw;
     color:#FFFF;
     font-weight: bolder;
   }
   .titulo h3{
     text-align:center;
     position: relative;
-    bottom:-1em;
-    text-align: center;
     letter-spacing: 3px;
     font-family: 'Slabo 27px', serif;
-    font-size: 2.5em;
-    top:50px;
+    font-size: 2.0em;
+    top:2vw;
     color: #ffff;
     font-weight: bolder;
   }
 
   .imag{
-    margin: 10px;
-    border-radius: 20px;
+    margin-left: 2vw;
+    margin-right: 1vw;
+    border-radius: 1vw;
   }
   .uno{
     /* background-color: #D2D6B9; */
@@ -82,60 +86,60 @@
     /* background-image: url('https://www.elegantthemes.com/blog/wp-content/uploads/2017/07/programming-languages-to-learn-for-wordpress-featured-image.png'); */
   }
   #uno{
-    padding-top: 20px;
+    padding-top: 0.5vw;
   }
   #uno h1{
     position: relative;
-    left:10px;
+    left:0.8vw;
   }
   #uno p{
     text-align:center;
     position: relative;
-    bottom:-80px;
-    left:500px;
+    bottom:-5vw;
+    left:28vw;
     text-align: left;
     letter-spacing: 2px;
     font-family: 'Slabo 27px', serif;
-    font-size: 20px;
+    font-size: 24px;
     color: grey;
   }
 
   #buton-1{
     position: relative;
-    bottom:265px;
-    left:32%;
-    font-size: 20px;
+    bottom:15.5vw;
+    left:16vw;
+    font-size: 23px;
   }
 
   #bienv{
     position: relative;
     font-size:30px;
-    bottom:290px;
-    left:9%;
+    bottom:16.8vw;
+    left:4vw;
   }
   #bienv1{
     position: relative;
     font-size:30px;
-    bottom:330px;
-    left:3%;
+    bottom:18.8vw;
+    left:1vw;
   }
   #uno img{
     position:relative;
-    width:300px;
-    height:200px;
-    bottom:100px;
+    width:20vw;
+    height:10vw;
+    bottom:5vw;
     border-radius: 20%;
-    right:180px;
+    right:10vw;
   }
 
   #dos h1{
     position: relative;
-    left:10px;
-    top:10px;
+    left:0vw;
+    top:0vw;
   }
   #dos h2{
     position: relative;
-    top:30px;
+    top:1.5vw;
     text-align: center;
     letter-spacing: 2px;
     font-family: 'Slabo 27px', serif;
@@ -144,22 +148,22 @@
   }
   #dos h3{
     position: relative;
-    top:40px;
+    top:2vw;
   }
   #dos h4{
     position: relative;
-    top:40px;
+    top:2.5vw;
   }
  #buton2{
   position: relative;
-  bottom:305px;
-  left:35%;
+  bottom:17.5vw;
+  left:16.3vw;
   font-size: 20px;
  }
 
   #dos p{
     position: relative;
-    bottom:-50px;
+    bottom:-3vw;
     text-align: left;
     letter-spacing: 2px;
     font-family: 'Slabo 27px', serif;
@@ -168,29 +172,32 @@
   }
  #dos img{
    position: relative;
-   bottom:150px;
-   left:150px;
-   width:100px;
-   height:70px;
+   bottom:8.5vw;
+   left:8vw;
+   width:10vw;
+   height:5vw;
+   border-radius: 2vw;
  }
 
  #tres h1{
    position: relative;
-   left:10px;
+   left:0vw;
    font-size: 35px;
 
  }
  #tres h2{
    position: relative;
-   left:10px;
-   top:10px;
-   font-size: 20px;
+   left:0vw;
+   top:3.5vw;
+   font-size: 1.5vw;
+   font-style: italic;
+   text-decoration: underline;
 
  }
  #tres p{
    position: relative;
-   left:500px;
-   top:120px;
+   left:30vw;
+   top:7vw;
    text-align: left;
    letter-spacing: 2px;
    font-family: 'Slabo 27px', serif;
@@ -201,26 +208,26 @@
 
 #buton3{
    position: relative;
-   bottom:470px;
-   left:35%;
+   bottom:26vw;
+   left:17vw;
    font-size: 20px;
  }
 #bienv2{
   position: relative;
-   bottom:500px;
-   left:7%;
+   bottom:27.5vw;
+   left:3vw;
    font-size: 20px;
  }
 
  #tres img{
    position: relative;
-   bottom:150px;
-   right:200px;
-   width:400px;
-   height:250px;
+   bottom:8vw;
+   width:23vw;
+   left:-12vw;
+   height:14vw;
    border-radius: 20px;
  }
-  .imagg{
+  /* .imagg{
     position: relative;
     top:-150px;
     right:-200px;
@@ -229,7 +236,7 @@
     height: 100px;
     width: 100px;
     background-color: lightblue;
-  }
+  } */
   /* #textr{
   position:relative;
   bottom:500px;
@@ -306,7 +313,7 @@
   }
 
   #ranking{
-    height: 350px;
+    height: 20vw;
     width:100%;
   }
   #colr{
@@ -314,15 +321,15 @@
   }
   #colr button{
     position: relative;
-    bottom:410px;
-    left:410px;
+    bottom:22vw;
+    left:22vw;
     font-size: 20px;
   }
   #colr p{
     position: relative;
-    bottom:400px;
-    left:300px;
-    textSize:20px;
+    bottom:5vw;
+    left:5vw;
+    font-size: 23px;
   }
 
   .mainpage{
@@ -352,8 +359,8 @@
   }
   #buton4{
     position: relative;
-    bottom:190px;
-    left:61%;
+    bottom:10.3vw;
+    left:30vw;
     font-size:20px;
   }
   #foro img{
@@ -436,37 +443,39 @@
   #about h1{
     color:white;
     position: relative;
-    left:150px;
+    left:8vw;
     font-size:25px;
   }
   #about h2{
     color:white;
     position: relative;
-    left:80px;
+    left:4vw;
     font-size:20px;
+    text-decoration: underline;
   }
   #about p{
     color:white;
     position: relative;
-    left:40px;
+    left:2vw;
     font-size:15px;
   }
   #about nav{
     position: relative;
-    left:100px;
+    left:4.5vw;
     font-size: 20px;
+    width:58%;
   }
   #about h3{
     position: relative;
-    left:100px;
+    left:5vw;
     color:white;
     font-size: 20px;
 
   }
   #social h1{
     position: relative;
-    top:10px;
-    left:350px;
+    top:1vw;
+    left:19vw;
     color:#FFEBCB;
   }
   .btn-floating i{
@@ -475,20 +484,30 @@
     color: #FFFF;
     font-size: 1em;
     border-radius: 50%;
-    line-height: 60px;
-    width: 60px;
+    line-height: 3vw;
+    width: 3vw;
     background-color: grey;
     position: relative;
-    top:30px;
-    left:25px;
+    top:1.5vw;
+    left:1.5vw;
 
   }
 
+#buton-ubic{
+  position: relative;
+  text-align: center;
+  color: #FFFF;
+  font-size: 1em;
+  border-radius: 50%;
+  top:1vw;
+  left:3.5vw;
+
+}
   #trofeo{
     font-size: 30px;
     position: relative;
-    bottom:150px;
-    left:300px;
+    bottom:8.2vw;
+    left:18.2vw;
   }
   #concurso p{
     position: relative;
@@ -503,8 +522,8 @@
   }
   #concurso button{
     position: relative;
-    bottom:130px;
-    left:330px;
+    bottom:7vw;
+    left:19.5vw;
     font-size: 20px;
   }
   #concurso img{
@@ -530,21 +549,25 @@
   }
   #ubic h1{
     color:white;
+    top:1vw;
+    position: relative;
   }
   #ubic p{
     color:white;
     position: relative;
-    left:10px;
+    left:-0.9vw;
+    top:1vw;
+    font-size: 1.2vw;
   }
 
-  .col-lg-2  i{
+  /* .col-lg-2  i{
     display:inline-block;
     text-align: center;
     color:#FFFF;
     font-size: 1em;
     top:-10px;
     left:60px;
-  }
+  } */
   .navigation{
     background-color: white;
     border-style: ridge;
@@ -631,8 +654,7 @@
   }
   footer{
     position: fixed;
-    height: 150px;
-    bottom: 0;
+    height: 200%;
     width: 100%;
 
   }
