--- a/src/design.css
+++ b/src/design.css
@@ -24,7 +24,7 @@
   height:100%;
 }
   .header{
-    background-image: url('http://gda.itesm.mx/sitios/imagesCont/computer-programming_bcba943585.jpeg');
+    background-image: url('https://zgab33vy595fw5zq-zippykid.netdna-ssl.com/wp-content/uploads/2017/10/What_are_the_Most_Disliked_Programming_Languages-1.png');
     background-attachment: scroll;
     background-size:cover;
     top:2em;
@@ -32,6 +32,33 @@
     height:24em;
     z-index: -2;
     opacity: 0.9;
+  }
+  .header-ranking{
+    background-image: url('https://e3.365dm.com/18/05/1096x616/skynews-world-map-map_4298829.jpg?20180502134213');
+    background-attachment: scroll;
+    background-size:cover;
+    top:2em;
+    width:100%;
+    height:24em;
+    z-index: -2;
+    opacity: 0.9;
+  }
+  .header-challengee{
+    background-image: url('https://www.varchev.com/wp-content/uploads/2015/03/challenge.jpg');
+    background-attachment: scroll;
+    background-size:cover;
+    top:2em;
+    width:100%;
+    height:24em;
+    z-index: -2;
+    opacity: 0.9;
+  }
+  .header-challengee h1{
+    color:#FF0000;
+  }
+
+  .header-ranking h1{
+    color:#FF0000;
   }
   .titulo {
     position:relative;
@@ -44,7 +71,7 @@
     text-align: center;
     letter-spacing: 3px;
     top:2vw;
-    color:#FFFF;
+    color:#B0A339;
     text-align: center;
     letter-spacing: 3px;
     font-family: 'Slabo 27px', serif;
@@ -59,7 +86,7 @@
     font-family: 'Slabo 27px', serif;
     font-size: 2.5em;
     top:2vw;
-    color:#FFFF;
+    color:#B0A339;
     font-weight: bolder;
   }
   .titulo h3{
@@ -69,7 +96,7 @@
     font-family: 'Slabo 27px', serif;
     font-size: 2.0em;
     top:2vw;
-    color: #ffff;
+    color: #B0A339;
     font-weight: bolder;
   }
 
@@ -437,8 +464,9 @@
   .page-footer{
     position: relative;
     background-color:#20c997;
-    height: 100%;
+    height: 14vw;
     width:100%;
+
   }
   #about h1{
     color:white;
@@ -653,7 +681,7 @@
     font-family: "Gilda-Display", serif; */
   }
   footer{
-    position: fixed;
+    position: relative;
     height: 200%;
     width: 100%;
 
@@ -724,7 +752,7 @@
     margin-left: -20%;
     margin-top: 10em;
     display: block;
-    color :##70FF8F;
+    color :#70FF8F;
     background-color: #70FF8F;
   }
   .popup {
@@ -735,6 +763,20 @@
     right:5%;
     cursor: pointer;
   }
+  /* .popup1{
+      position: relative;
+      margin: 0 auto;
+      top: 45%;
+      color:#70FF8F;
+      right:5%;
+      cursor: pointer;
+
+  }
+  div.popup1 img {
+    margin-block-start: -9em;
+    margin-block-end: 0em;
+    margin-inline-start: 90%;
+  } */
   div.popup img {
     margin-block-start: -9em;
     margin-block-end: 0em;
@@ -1390,4 +1432,8 @@ html,body{
   position: absolute;
   cursor: pointer;
   color: #00BACC;
+}
+#tabla-challengee{
+  width:100%;
+  font-size: 13px;
 }
